fixing user card spacing

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -7353,9 +7353,9 @@ hr {
 .sp-user-card {
   background-color: darkblue;
   border-radius: 5px;
-  margin-bottom: 2rem;
   width: 20rem;
   margin: 0 auto;
+  margin-bottom: 2.5rem;
   border-radius: 1px solid black;
   color: #fafafa;
   padding: 1rem; }
