--- a/scss/sp.sass
+++ b/scss/sp.sass
@@ -230,9 +230,9 @@ hr
     border-radius: 25px
   background-color: darkblue
   border-radius: 5px
-  margin-bottom: 2rem
   width: 20rem
   margin: 0 auto
+  margin-bottom: 2.5rem
   border-radius: 1px solid black
   color: $white
   padding: 1rem
